--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -671,6 +671,7 @@
 .newsletter-form input {
     flex: 1;
     padding: 12px 15px;
+    margin-left:120%;
     border: 2px solid var(--gold-primary);
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.1);
@@ -801,6 +802,7 @@
 
 .payment-methods {
     display: flex;
+    margin-left:650px;
     align-items: center;
     gap: 10px;
 }
