--- a/public_html/css/auth.css
+++ b/public_html/css/auth.css
@@ -5,7 +5,7 @@
     border-radius: 10px;
     padding: 40px;
     width: 100%;
-    max-width: 450px;
+    max-width: 100%;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
 }
 
